@@ -18,11 +18,18 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
 
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.2'
-    implementation 'org.springdoc:springdoc-openapi-ui:1.5.9'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.6.3'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2', 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     implementation project(':music-library')
 }
 
 test {
     useJUnitPlatform()
+}
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
 }
