@@ -26,8 +26,13 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-    implementation 'org.springframework.boot:spring-boot-starter:2.5.2'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.2'
-    implementation 'org.postgresql:postgresql:42.2.23'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.2'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.postgresql:postgresql'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+}
+
+compileJava {
+    options.compilerArgs += ['--enable-preview']
 }
